[package]
name = "gate"
version = "0.1.0"
edition = "2021"

[dependencies]
orion = { path = "../orion" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.120"
serde = "1.0.204"
