[package]
name = "orion-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.72", features = ["extra-traits", "full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
trybuild = { version = "1.0.99", features = ["diff"] }
