[package]
name = "orion"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35.1"
async-trait = "0.1.81"
bytes = "1.6.0"
futures = "0.3.30"
redis = { version = "0.26.0", features = ["tokio-comp"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
orion-macros = { path = "../orion-macros"}
